[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Objects/DoorClosedLower.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/DoorOpenLower.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/scripts/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/Objects/DoorUpper.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/DoorParticle.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[node name="Door" type="Node2D"]
script = ExtResource( 3 )

[node name="RockLeft" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="RockLeft"]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 32, 12, 32, 12, 0 )

[node name="RockRight" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RockRight"]
visible = false
polygon = PoolVector2Array( 48, 0, 48, 32, 36, 32, 36, 0 )

[node name="FrontSmash" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FrontSmash"]
polygon = PoolVector2Array( 16, 24, 32, 24, 32, 32, 16, 32 )

[node name="BackSmash" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BackSmash"]
polygon = PoolVector2Array( 16, 0, 32, 0, 32, 8, 16, 8 )

[node name="DoorCenter" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorCenter"]
polygon = PoolVector2Array( 16, 16, 32, 16, 32, 24, 16, 24 )

[node name="UpperDoor" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="DoorBase" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 1 )
animation = "closed"
centered = false

[node name="SmallSmash" type="CPUParticles2D" parent="."]
position = Vector2( 24, 24 )
z_index = -1
emitting = false
amount = 4
lifetime = 10.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 5 )
direction = Vector2( 0, 20 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.45
angular_velocity_random = 1.0
damping = 100.0
angle = 360.0
angle_random = 1.0

[node name="BigSmash" type="CPUParticles2D" parent="."]
position = Vector2( 24, 24 )
z_index = -1
emitting = false
amount = 12
lifetime = 10.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 5 )
direction = Vector2( 0, 20 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.64
angular_velocity_random = 1.0
damping = 100.0
angle = 360.0
angle_random = 1.0
[connection signal="body_entered" from="FrontSmash" to="." method="_on_FrontSmash_body_entered"]
[connection signal="body_entered" from="BackSmash" to="." method="_on_BackSmash_body_entered"]
